# pipelineR

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/commands/: add-dsl-function.md  add-grpc-rpc.md  milestone-check.md  new-plugin.md
.claude/skills/dsl-parser/: SKILL.md
.claude/skills/grpc-proto/: SKILL.md
.claude/skills/plugin-sdk/: SKILL.md
.claude/skills/rust-etl-engine/: SKILL.md
.github/workflows/: ci.yml  release.yml
connectors/pipeliner-connector-delta/: Cargo.toml
connectors/pipeliner-connector-delta/src/: config.rs  error.rs  lib.rs  main.rs  sink.rs
connectors/pipeliner-connector-file/: Cargo.toml
connectors/pipeliner-connector-file/src/: config.rs  csv_reader.rs  csv_writer.rs  error.rs  json_reader.rs  json_writer.rs  lib.rs  main.rs  parquet_reader.rs  sink.rs  source.rs  storage.rs  storage_azure.rs  storage_gcs.rs  storage_local.rs  storage_s3.rs
connectors/pipeliner-connector-parquet/: Cargo.toml
connectors/pipeliner-connector-parquet/src/: config.rs  error.rs  lib.rs  main.rs  sink.rs
connectors/pipeliner-connector-rest/: Cargo.toml
connectors/pipeliner-connector-rest/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  pagination.rs  response.rs  source.rs
connectors/pipeliner-connector-sql/: Cargo.toml
connectors/pipeliner-connector-sql/src/: config.rs  driver.rs  driver_mysql.rs  driver_postgres.rs  driver_sqlserver.rs  error.rs  lib.rs  main.rs  sink.rs  source.rs
docs/: ARCHITECTURE.md  IMPLEMENTATION-PLAN.md  PLUGIN-AUTHORING.md  REQUIREMENTS.md
example/: connectors.toml  output.csv  output.jsonl  pipeline.toml  sales.csv
pipeliner-arrow-convert/: Cargo.toml
pipeliner-arrow-convert/src/: lib.rs
pipeliner-cli/: Cargo.toml
pipeliner-cli/src/: main.rs
pipeliner-cli/tests/: m5_integration.rs
pipeliner-core/: Cargo.toml
pipeliner-core/src/: config.rs  convert.rs  error.rs  lib.rs  record.rs  runtime.rs  server.rs  telemetry.rs
pipeliner-core/src/connector/: client.rs  manager.rs  mod.rs
pipeliner-core/src/dsl/: ast.rs  error.rs  eval.rs  functions.rs  mod.rs  parser.rs  step.rs
pipeliner-core/src/plugin/: client.rs  manager.rs  mod.rs
pipeliner-core/tests/: m1_integration.rs  m2_integration.rs  m3_integration.rs  m4_integration.rs  m6_integration.rs
pipeliner-mcp/: Cargo.toml
pipeliner-mcp/src/: main.rs
pipeliner-proto/: Cargo.toml  build.rs
pipeliner-proto/proto/pipeliner/v1/: common.proto  connector.proto  plugin.proto  records.proto  service.proto
pipeliner-proto/src/: convert.rs  lib.rs
pipeliner-sdk/: Cargo.toml
pipeliner-sdk/src/: config.rs  convert.rs  error.rs  grpc_sink.rs  grpc_source.rs  lib.rs  server.rs  sink.rs  source.rs
plugins/pipeliner-plugin-file/: Cargo.toml
plugins/pipeliner-plugin-file/src/: config.rs  csv_reader.rs  error.rs  json_reader.rs  lib.rs  main.rs  sink.rs  source.rs
