[workspace]
resolver = "2"
members = [
    "pipeliner-core",
    "pipeliner-cli",
    "pipeliner-sdk",
    "pipeliner-proto",
    "pipeliner-arrow-convert",
    "connectors/pipeliner-connector-file",
    "connectors/pipeliner-connector-sql",
    "connectors/pipeliner-connector-rest",
    "connectors/pipeliner-connector-delta",
    "connectors/pipeliner-connector-parquet",
]
