[workspace]
resolver = "2"
members = [
    "pipeliner-core",
    "pipeliner-cli",
    "pipeliner-sdk",
    "pipeliner-proto",
    "pipeliner-arrow-convert",
    "connectors/pipeliner-connector-file",
    "connectors/pipeliner-connector-sql",
    "connectors/pipeliner-connector-rest",
    "connectors/pipeliner-connector-delta",
    "connectors/pipeliner-connector-parquet",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pipeliner/pipelineR"
rust-version = "1.75"
