[package]
name = "pipeliner-arrow-convert"
description = "Row-based Record to Apache Arrow RecordBatch conversion for pipelineR"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pipeliner-core = { path = "../pipeliner-core" }
arrow = { version = "54", default-features = false }
chrono = "0.4"
indexmap = "2"
serde_json = "1"
thiserror = "2"
