[package]
name = "pipeliner-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
pipeliner-core = { path = "../pipeliner-core" }
pipeliner-proto = { path = "../pipeliner-proto" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
pipeliner-core = { path = "../pipeliner-core" }
pipeliner-proto = { path = "../pipeliner-proto" }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
