[package]
name = "pipeliner-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
indexmap = "2"
pipeliner-proto = { path = "../pipeliner-proto" }
prost-types = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
toml = "0.8"
tonic = "0.12"
tracing = "0.1"
winnow = "0.7"

[dev-dependencies]
async-trait = "0.1"
indexmap = "2"
pipeliner-sdk = { path = "../pipeliner-sdk" }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util", "time"] }
tokio-stream = "0.1"
