[package]
name = "pipeliner-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
chrono = "0.4"
indexmap = "2"
pipeliner-proto = { path = "../pipeliner-proto" }
prost-types = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time", "signal"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
tonic = "0.12"
tracing = "0.1"
winnow = "0.7"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "metrics"] }

[dev-dependencies]
async-trait = "0.1"
indexmap = "2"
pipeliner-sdk = { path = "../pipeliner-sdk" }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util", "time"] }
tokio-stream = "0.1"
