[package]
name = "pipeliner-proto"
description = "Protobuf definitions for pipelineR — shared between engine and connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
