[package]
name = "pipeliner-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
pipeliner-core = { path = "../pipeliner-core" }
pipeliner-proto = { path = "../pipeliner-proto" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tonic = "0.12"
