[package]
name = "pipeliner-sdk"
description = "Plugin SDK for pipelineR — Source and Sink traits with gRPC scaffolding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pipeliner-core = { path = "../pipeliner-core" }
pipeliner-proto = { path = "../pipeliner-proto" }
async-trait = "0.1"
chrono = "0.4"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tokio-stream = "0.1"
tonic = "0.12"
