[package]
name = "pipeliner-connector-delta"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pipeliner-connector-delta"
path = "src/main.rs"

[dependencies]
pipeliner-core = { path = "../../pipeliner-core" }
pipeliner-proto = { path = "../../pipeliner-proto" }
pipeliner-sdk = { path = "../../pipeliner-sdk" }
pipeliner-arrow-convert = { path = "../../pipeliner-arrow-convert" }
async-trait = "0.1"
arrow = { version = "54", default-features = false }
chrono = "0.4"
datafusion = "46"
deltalake = { version = "0.25", features = ["datafusion"] }
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[dev-dependencies]
tempfile = "3"
