[package]
name = "pipeliner-connector-file"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pipeliner-connector-file"
path = "src/main.rs"

[dependencies]
pipeliner-core = { path = "../../pipeliner-core" }
pipeliner-proto = { path = "../../pipeliner-proto" }
pipeliner-sdk = { path = "../../pipeliner-sdk" }
async-trait = "0.1"
chrono = "0.4"
csv = "1"
glob = "0.3"
indexmap = "2"
parquet = { version = "54", default-features = false, features = ["arrow"] }
arrow = { version = "54", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }

# Cloud storage
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
azure_storage = "0.21"
azure_storage_blobs = "0.21"
cloud-storage = { version = "0.11", features = ["rustls-tls"], default-features = false }
futures = "0.3"
bytes = "1"
time = "0.3"
pin-utils = "0.1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
