[package]
name = "pipeliner-connector-parquet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pipeliner-connector-parquet"
path = "src/main.rs"

[dependencies]
pipeliner-core = { path = "../../pipeliner-core" }
pipeliner-proto = { path = "../../pipeliner-proto" }
pipeliner-sdk = { path = "../../pipeliner-sdk" }
pipeliner-arrow-convert = { path = "../../pipeliner-arrow-convert" }
async-trait = "0.1"
arrow = { version = "54", default-features = false }
chrono = "0.4"
indexmap = "2"
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "zstd", "flate2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[dev-dependencies]
tempfile = "3"
