[package]
name = "pipeliner-connector-rest"
description = "REST API source connector for pipelineR — pagination, auth, and rate limiting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pipeliner-connector-rest"
path = "src/main.rs"

[dependencies]
pipeliner-core = { path = "../../pipeliner-core" }
pipeliner-proto = { path = "../../pipeliner-proto" }
pipeliner-sdk = { path = "../../pipeliner-sdk" }
async-trait = "0.1"
chrono = "0.4"
indexmap = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
