[package]
name = "pipeliner-connector-sql"
description = "SQL connector for pipelineR — PostgreSQL, MySQL, and SQL Server source and sink"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pipeliner-connector-sql"
path = "src/main.rs"

[dependencies]
pipeliner-core = { path = "../../pipeliner-core" }
pipeliner-proto = { path = "../../pipeliner-proto" }
pipeliner-sdk = { path = "../../pipeliner-sdk" }
async-trait = "0.1"
chrono = "0.4"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# SQL drivers
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-serde_json-1"] }
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tempfile = "3"
